# ATLAS-AI

./: .coverage  .coveragerc  .cursorrules  .env.example  .gitignore  AGENTS.md  AXIS_PHASE1_OVERVIEW.md  AXIS_PLAYBOOK.md  CLAUDE.md  Dockerfile  FINAL_REPORT.txt  MIGRATION_TO_LOCAL.md  PHASE2_PLAN.md  PROJECT_SNAPSHOT.md  README.md  check_mic.py  deps.dot  deps_utf8.dot  docker-compose.yml  legacylens-report.md  legal_mind.db  list_models.py  list_tools.py  list_tools_v2.py  list_tools_v3.py  pyproject.toml  repair_env.py  report.json  requirements.txt  requirements_legacy_full.txt  run.py  run_telegram_bridge.py  run_test.py  take_mascot_shot.py  test_download.py  test_hud_aura_emulator.py  test_hud_streamer.py  test_meer_features.py  test_memory_system.py  test_ollama.py  (+2 more)
.githooks/: pre-commit
.github/workflows/: axis_ci.yml
Atlas_v2/: .gitattributes  __init__.py  main.py  pytest.ini  success_log.txt  test_telegram_confirm.py  weather.sh
Atlas_v2/agent_skills/: __init__.py
Atlas_v2/core/: brain.py  i18n.py  logger.py  orchestrator.py  validator.py  vision_engine.py
Atlas_v2/memories/: axis_memory.db
Atlas_v2/scripts/: rag_maintenance.py  silence.ps1  silence.py
Atlas_v2/tests/: test_blueprints.py  test_brain.py  test_core_memory.py  test_coverage_80.py  test_coverage_80_final.py  test_coverage_booster.py  test_discover_all.py  test_discovery.py  test_extra_skills.py  test_file_master.py  test_final_booster_80.py  test_firewall.py  test_healer.py  test_i18n.py  test_main.py  test_massive_coverage.py  test_mcp_bridge.py  test_mcp_server_registry.py  test_memory.py  test_orchestrator.py  test_rag_memory.py  test_secret_validator.py  test_security_guard.py  test_skills_exhaustive.py  test_skills_v277.py  test_telegram_listener.py  test_validator.py  test_vision_logic.py  test_vision_skill.py
GhostSMM/: linkedin_release_v3.2.8.md
Workspace/: handshake.txt
agent_skills/: inventory_report.md
agent_skills/weather/: manifest.py
agents/: coder_agent.py
archive_v1/: apps.json  check_camera.py  check_mic_detailed.py  main_with_atlas.py  setup_autostart.py  tasks.json
archive_v1/agents/: __init__.py  queue_manager.py
archive_v1/config/: visual_zones.json
archive_v1/core/: hud_manager.py  vision_manager.py  visual_bridge.py  voice_output.py
archive_v1/skills/: brain.py  command_queue.py  context.py  context_buffer.py  cursor_agent.py  git_ops.py  memory_storage.py  personality.py  scanner.py  scheduler_module.py  system_navigator.py  system_observer.py  tools_definition.py  tray_manager.py  voice_output.py
archive_v1/visual_poc/: README.md
core/: atlas.py  voice_control.py
drafts/: stable_release_v3.md
memories/AI/: ATLAS_Departments__2026-02-18_13-19-05.txt  Analysis_Request__2026-02-18_19-38-35.txt  CapCut_Cache__2026-02-08_16-22-29.txt  Cleanup_Request__2026-02-09_00-04-01.txt  Command_Error__2026-02-08_16-14-55.txt  Command_Error__2026-02-08_18-53-38.txt  Command_Failed__2026-02-08_16-18-23.txt  Command_Failure__2026-02-08_17-38-52.txt  Cursor_Error__2026-02-08_17-38-17.txt  Departments__2026-02-18_13-27-56.txt  Draw_Sun_Fail__2026-02-09_21-00-54.txt  Emergency_Clean__2026-02-08_16-18-42.txt  Enable_Gestures__2026-02-17_17-22-44.txt  Focus_Mode__2026-02-08_17-54-42.txt  Memory_Check__2026-02-08_16-10-27.txt  Music_Request__2026-02-08_17-39-29.txt  Open_ChatGPT__2026-02-08_16-19-01.txt  Paint_Draw_House__2026-02-09_21-00-02.txt  Request_Failed__2026-02-09_12-18-22.txt  Space_Query__2026-02-08_15-17-29.txt  Speech_Recognition__2026-02-08_17-54-25.txt  Vision_Control__2026-02-17_17-23-13.txt
memories/AI_Actions/: Draw_Sun__2026-02-09_20-57-37.txt
memories/Assistant/: Play_Music__2026-02-08_16-16-53.txt
skills/: __init__.py  audio_manager.py  code_analyzer.py  command_registry.py  inbox_watcher.py  journal.py  launcher.py  morning_routine.py  music.py  router.py  scenario_manager.py  shell_executor.py  system_ops.py  task_manager.py  telegram_bridge.py
tests/: test_legal_parser.py  test_legal_parser_error.py
tmp/: test_axis_schema.py
venv_broken_20260314_220231/: pyvenv.cfg
visual_poc/: index.html
(+217 files in other folders)
